day 2: js scripts were filled with some functions

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="style.css" rel="stylesheet" type="text/css"/>
     <!-- hola! -->
     <script src="script.js"></script>
+    <script src="main.js"></script>
+
   </head>
   <body>
     <div id='menu' class='topnav'>
