Day 3: The Mini Back-End was built for login and register.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>TutoEasy</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="./css/style.css" rel="stylesheet" type="text/css"/>
     <!-- hola! -->
-    <script src="script.js"></script>
-    <script src="main.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/main.js"></script>
 
   </head>
   <body>
