--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <img id='logo' src='img/T.png'>
       <p id="leftElement">TuToEasy</p>
     </div>
-    <div id='main' class='presentation'>
+    <div id='main' class='w-100 h-100'>
       <h1>¡Bienvenido!</h1>
       <p>Esta página fue creada con fines educativos</p><br>
       <code>NO INTENTES HACKEARLO >:V</code>
