--- a/index.html
+++ b/index.html
@@ -7,25 +7,40 @@
     <link href="./css/style.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- hola! -->
-    <script src="./js/script.js"></script>
-    <script src="./js/main.js"></script>
-
   </head>
   <body>
     <div id='menu' class='topnav'>
-      <p id="rightElement" onclick='showCreateAccount()' class='rightAlign'>Crear Cuenta</p>
-      <p id="rightElement" onclick='showLogin()'>Identificarse</p>
-      <p id="rightElement" onclick='showWelcome()'>Inicio</p>
-      <img id='logo' src='img/T.png'>
-      <p id="leftElement">TuToEasy</p>
+      <p class="rightElement" id="btnRegister" onclick='showCreateAccount()' class='rightAlign'>Crear Cuenta</p>
+      <p class="rightElement" id="btnLogin" onclick='showLogin()'>Identificarse</p>
+      <p class="rightElement" id="btnInit">Inicio</p>
+      <img class='logo' src='img/T.png'>
+      <p class="leftElement">TuToEasy</p>
     </div>
     <div id='main' class='w-100 h-100'>
-      <h1>¡Bienvenido!</h1>
-      <p>Esta página fue creada con fines educativos</p><br>
-      <code>NO INTENTES HACKEARLO >:V</code>
     </div>
+
+    <div id="targetDiv">Aquí se despliega la Información</div>
+    <script>
+      const targetDiv = document.getElementById("targetDiv");
+      let htmlContent;
+      let url = "https://api.jikan.moe/v3";
+      setTimeout(() => {
+       fetch(url)
+       .then(response => response.json())
+       .then(data => {
+         console.log(data);
+         for(property in data) {
+           htmlContent += `
+             <b>${property}: </b><span>${data[property]}</span><br>
+           `;
+         }
+         targetDiv.innerHTML = htmlContent;
+       });
+      }, 6000);
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
