--- a/index.html
+++ b/index.html
@@ -8,21 +8,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   </head>
+
   <body>
     <div id='menu' class='topnav'>
-      <p class="rightElement" id="btnRegister" onclick='showCreateAccount()' class='rightAlign'>Crear Cuenta</p>
-      <p class="rightElement" id="btnLogin" onclick='showLogin()'>Identificarse</p>
+      <p class="rightElement rightAlign" id="btnRegister">Crear Cuenta</p>
+      <p class="rightElement" id="btnLogin">Identificarse</p>
       <p class="rightElement" id="btnInit">Inicio</p>
       <img class='logo' src='img/T.png'>
       <p class="leftElement">TuToEasy</p>
     </div>
-    <div id='main' class='w-100 h-100'>
-    </div>
+
+    <!--Aquí se va a desarrollar las Vistas de Inicio, Login, Register y Home-->
+    <div id='main' class='w-100 h-100'></div>
+    <!--Fase Experimental, aquí se despliegan momentáneamente nuestras API-->
     <button id="dogButton" onclick="showDog()">Dogs!</button>
     <button id="dogButton" onclick="setInterval('showDog()',3000)">More Dogs!</button>
     <div id="targetDiv">Aquí se despliega la Información</div>
     <button onclick="showPosition()">Doxxear</button>
     <div id="mapholder"></div>
+
     <script>
       const showDog = (number) =>{
         const targetDiv = document.getElementById("targetDiv");
@@ -65,6 +69,8 @@
         map.innerHTML = `<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d18045.970672613275!2d`+longitude+`!3d`+latitude+`!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2spe!4v1642120601861!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>`;
       }
     </script>
+
+    <!--Esential Scripts-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
     <script src="./js/script.js"></script>
